# pupuji

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT-MAP.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/harmony/: CONTEXT.md  build-profile.json5  oh-package.json5  package.json
apps/harmony/AppScope/: app.json5
apps/harmony/AppScope/resources/base/element/: string.json
apps/harmony/entry/: oh-package.json5
apps/harmony/entry/src/main/: module.json5
apps/harmony/entry/src/main/ets/common/api/: ApiClient.ets
apps/harmony/entry/src/main/ets/entryability/: EntryAbility.ets
apps/harmony/entry/src/main/ets/pages/: AchievementsPage.ets  HistoryPage.ets  HomePage.ets  Index.ets  LoginPage.ets  OnboardingPage.ets  ProfilePage.ets  SalarySetupPage.ets
apps/harmony/entry/src/ohosTest/: module.json5
apps/harmony/hvigor/: hvigor-config.json5
docs/: PRD.md
docs/adr/: 0001-harmonyos-next-initial-platform.md
docs/agents/: domain.md
server/: .dockerignore  .env.example  CONTEXT.md  Dockerfile  alembic.ini  config.py  database.py  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: .gitkeep  099794a7b57c_add_verification_codes.py  681d18f20f34_init.py  8f9b62fb8442_init.py  94f8e14da90e_init.py  d654ca6da8dc_init.py
server/auth/: dependencies.py  jwt.py  redis.py  router.py  schemas.py  sms.py
server/models/: __init__.py  badge.py  record.py  user.py  verification_code.py
server/records/: router.py  schemas.py
server/tests/: .gitkeep
server/users/: router.py  schemas.py
(+5 files in other folders)
